crates/aranya-policy-lang/tests/data/old_subtraction.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid operator
  |
2 |     return 3 - 4
  |              ^ found `-`
  |
help: you should use an arithmetic function
  |
2 -     return 3 - 4
2 +     return saturating_sub(3, 4)
  |
2 -     return 3 - 4
2 +     return check_unwrap sub(3, 4)
  |
